tests/ui/macros/metavar-expressions/concat-repetitions.stderr
error: `${concat(...)}` variable is still repeating at this depth
  --> $DIR/concat-repetitions.rs:14:29
   |
LL |             const ${concat($a, Z)}: i32 = 3;
   |                             ^

error: `${concat(...)}` variable is still repeating at this depth
  --> $DIR/concat-repetitions.rs:21:30
   |
LL |         read::<${concat($t, $en)}>()
   |                              ^^

error: `${concat(...)}` variable is still repeating at this depth
  --> $DIR/concat-repetitions.rs:21:30
   |
LL |         read::<${concat($t, $en)}>()
   |                              ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

